--- a/Header.css
+++ b/Header.css
@@ -9,7 +9,9 @@ header {
     align-items: center;
     background-color: #fff;
     font-family: 'Montserrat' , sans-serif;
-    width: 100vw;
+    width: 100vw ;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 0px 2px 20px 2px #000;
 }
 
 .logo {
